– online users section added – scroll to load old messages disabled – webkit scrollbar fixed

--- a/app/assets/stylesheets/messenger.scss
+++ b/app/assets/stylesheets/messenger.scss
@@ -168,40 +168,6 @@
   margin-right: 4px;
 }
 
-::-webkit-scrollbar {
-  min-width: 12px;
-  width: 12px;
-  max-width: 12px;
-  min-height: 12px;
-  height: 12px;
-  max-height: 12px;
-  background: #e5e5e5;
-  box-shadow: inset 0px 50px 0px rgba(82,179,217,0.9), inset 0px -52px 0px #fafafa;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #bbb;
-  border: none;
-  border-radius: 100px;
-  border: solid 3px #e5e5e5;
-  box-shadow: inset 0px 0px 3px #999;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #b0b0b0;
-  box-shadow: inset 0px 0px 3px #888;
-}
-
-::-webkit-scrollbar-thumb:active {
-  background: #aaa;
-  box-shadow: inset 0px 0px 3px #7f7f7f;
-}
-
-::-webkit-scrollbar-button {
-  display: block;
-  height: 26px;
-}
-
 /* T Y P E */
 
 input.textarea {
@@ -235,4 +201,46 @@ input.textarea {
 }
 .emojis:active {
   opacity: 0.9;
+}
+
+
+// Right sidebar
+
+.navbar { z-index: 9 }
+
+div.right-sidebar{
+  top:0;
+  right:0;
+  width: 200px;
+  height:100%;
+  background: #dedede;
+  position:fixed;
+  padding-top: 50px;
+}
+
+ul#online-users {
+  list-style: none;
+  padding: 0;
+  display: inline-block;
+  text-align: left;
+
+  > li {
+    position: relative;
+
+    &:after {
+      content: '';
+      width: 7px;
+      height: 7px;
+      background: #099a09;
+      position: absolute;
+      left: -16px;
+      top: 7px;
+      border-radius: 15px;
+    }
+  }
+
+}
+
+.chat-pane {
+  width: calc(100% - 200px);
 }
